[package]
name = "notion_rs"
version = "0.1.0"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.8", features = ["cookies", "json"] }
serde = "1.0.115"
serde_json = { version = "1.0.57", features = ["preserve_order"] }
anyhow = "1.0.32"
toml = "0.5.6"
tokio = { version = "0.2.22", features = ["test-util", "macros"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
indexmap = { version = "1.5.1", features = ["serde-1"] }


[dev-dependencies]
clap = "2.33.3"

