[package]
name = "notion-rs"
version = "0.1.0"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]
tags = ["notion", "api", "productivity", "notes"]
edition = "2018"
description = "Rust client for the unofficial notion.so API"
"license" = "MIT/Apache-2.0"

[dependencies]
serde = "1.0.115"
serde_json = { version = "1.0.57", features = ["preserve_order"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
indexmap = { version = "1.5.1", features = ["serde-1"] }
thiserror = "1.0.24"

# todo: move to surf
# reqwest requires tokio which is meh
# surf = { version = "2.1.0", optional = true }
reqwest = { version = "*", features = ["cookies", "json"], optional = true }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
anyhow = "1.0.32"

[features]
default = ["client"]
client = ["reqwest"]
